Fixed carousel question layout bug

--- a/app/assets/stylesheets/mw-runtime-base.scss
+++ b/app/assets/stylesheets/mw-runtime-base.scss
@@ -624,7 +624,7 @@ div.intra-page-nav {
 
 .jcarousel {
   .question {
-    margin: 20px 20px 20px 0;
+    margin: 0 20px 0 0;
   }
 } // .jcarousel
 
